# omi

./: .bumpversion.cfg  .bumpversion.toml  .cookiecutterrc  .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  RELEASE_PROCEDURE.md  format_code.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  transform_oem141_oem151.py
.github/: pypi-publish.yml  test-pypi-publish.yml
.github/workflows/: automated-testing.yml  linter.yml  test-pypi-publish.yml
ci/: appveyor-download.py  bootstrap.py
docs/: conf.py  dialect.rst  index.rst  installation.rst  internal_structure.rst  library.rst  oep_metadata.rst  usage.rst
docs/reference/: index.rst  metadata_tool.rst  omi.rst
examples/data/: metadata_v14.json  metadata_v15.json
examples/snippets/: oeps_current_metadata_validation_using_omi.py  test_dialect.py
licenses/: generate.py
licenses/templates/: license.py
requirements/: base.txt  dev.txt
scripts/: README.md  transform_oem141_oem151.py
src/metadata_tool/: __main__.py  cli.py  metadata_rdfttl.py  metadata_version_to_1_4.py  structure.py
src/metadata_tool/dialects/: __init__.py
src/omi/: __main__.py  base.py  cli.py  conversion.py  inspection.py  license.py  settings.py  structure.py  validation.py
src/omi/conversions/: README.md  utils.py  v152_to_v160.py  v160_to_v20.py
src/omi/data/: README.md  licenses.json
src/omi/dialects/: __init__.py
src/omi/oem_structures/: oem_v15.py
src/omi/schemas/: __init__.py
tests/: test_base.py  test_conversion.py  test_data_validation.py  test_inspection.py  test_metadata_tool.py  test_metadata_validation.py  test_schemas.py  test_validation.py
tests/data/: metadata_v13.json  metadata_v13_converted.json  metadata_v14.json  metadata_v14.ttl  metadata_v14_withoutresource.json  metadata_v15.json
tests/test_cli/: test_cli_translation.py
tests/test_data/: data.csv  invalid_oep_metadata_example.json  wrong.json
tests/test_data/validation/: data.csv  hackathon_lignite_hh_invalid.csv  hackathon_lignite_hh_valid.csv  metadata_for_data_csv.json  metadata_oep_validation.json  unsupported_oep_metadata_example.json
tests/test_dialects/: internal_structures.py
tests/test_dialects/base/: parser.py
tests/test_dialects/test_oep/: deactivate-test_roundtrip.py  internal_structures.py  metadata_v14.py  test_compiler.py  test_parser.py  test_roundtrip.py  test_translation.py
tests/test_dialects/test_rdf/: test_parser.py  (+5 more)
(+46 files in other folders)
